--- a/pom.xml
+++ b/pom.xml
@@ -55,5 +55,27 @@
             <artifactId>jakarta.persistence-api</artifactId>
             <version>3.1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>sa.com.cloudsolutions.antikythera</groupId>
+            <artifactId>field-access-agent</artifactId>
+            <version>1.0.0</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version> <!-- Use a recent version -->
+                <configuration>
+                    <argLine>
+                        -javaagent:"${settings.localRepository}/sa/com/cloudsolutions/antikythera/field-access-agent/1.0.0/field-access-agent-1.0.0.jar"
+                    </argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
